Changed "calibrated" to "corrected" in make plot key

--- a/src/vnacal.3
+++ b/src/vnacal.3
@@ -1119,7 +1119,7 @@ int main(int argc, char **argv)
                 strerror(errno));
         exit(8);
     }
-    (void)printf("# calibrated\\n");
+    (void)printf("# corrected\\n");
     for (int i = 0; i < M_FREQUENCIES; ++i) {
         double complex s00, s01, s10, s11;
 
